Dark mode is now working as expected. Need to fix bugs with restart flow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -169,7 +169,6 @@ text-align:center;
   padding: 5px;
   position: fixed;
   top: 80%;
-  left:37%;
   height:50px;
   width:250px;
   background-color:#45f542;
